--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">GreenQuest</string>
+    <string name="all">All</string>
+    <string name="favorite">Favorite</string>
+    <string name="advertising">Advertising...</string>
+    <string name="common_names">Common Names: </string>
+    <string name="species">Species: </string>
+    <string name="add_button">add Button</string>
+    <string name="edit_button">edit Button</string>
+    <string name="delete_plant">Delete Plant</string>
+    <string name="are_you_really_sure_that_you_want_to_delete_this_plant">Are you really sure that you want to delete this plant?</string>
+    <string name="notes">Notes</string>
+    <string name="start_discovery">Start Discovery</string>
+    <string name="disconnect_resetui">Disconnect / ResetUI</string>
+    <string name="discovered_endpoints">Discovered Endpoints:</string>
+    <string name="status">Status: %1$s</string>
+    <string name="received_image">Received Image</string>
+    <string name="daily">daily</string>
+    <string name="cards">cards</string>
+    <string name="points">points: </string>
+    <string name="loading">Loading...</string>
+    <string name="no_hint_was_given">no hint was given</string>
+    <string name="capture_image">Capture Image</string>
+    <string name="try_again">Try Again</string>
+    <string name="confirm">Confirm</string>
+    <string name="give_us_a_moment_to_identify_the_plant">give us a moment to identify the plant...</string>
+    <string name="congrats_you_ve_found_a">congrats, you\'ve found a %1$s !!</string>
+    <string name="add_to_portfolio">add to Portfolio</string>
+    <string name="create_challenge_card">create Challenge Card</string>
+    <string name="optionally_give_a_hint">Optionally: give a hint</string>
+    <string name="portfolio">Portfolio</string>
+    <string name="plant_detail">Plant Detail</string>
+    <string name="camera">Camera</string>
+    <string name="challenges">Challenges</string>
+    <string name="searchcards">SearchCards</string>
+    <string name="nearbyshare">NearbyShare</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
